documentation/versioned_docs/version-1.x/examples/cad-explode.mdx
---
id: cad-explode
title: Expand asset tool
description: Demo use the expand tool to expond and inspect a given asset.
---

import { DemoWrapper } from '@site/src/components/DemoWrapper';
import useBaseUrl from '@docusaurus/useBaseUrl';

This section describes the expand asset tool, which contains helper functions and logic for inspecting and expanding a given asset.
The constructor of this tool needs to be supplied with a [tree index](../concepts.md) which is the tree index of the root of the asset, and an instance of the `Cognite3DModel` that the asset belongs to.

:::note
For performance reasons, the root tree index must have a subtree size of less than 1000, else it will throw an error.
:::

<DemoWrapper name="Cognite3DViewerDemo" />

`ExpandAssetTool` contains two instance methods: `expand` and `reset`.
`expand` takes a float describing how far the individual nodes should be expanded (this will vary based on the initial vector between the node and root).
`reset` resets the tool and any transform that has been applied to any nodes.

:::note
In addition, an instance of the `ExpandAssetTool` also contains a promise: `readyPromise`, which indicates when the tool is ready to be used.
The reason you have to await is that initially the tool will make API calls to determine the individual locations of the nodes in the subtree.
:::

Below is an example that expands a given pipe asset (that has a tree index of `570730`) which is animated by a sine function.
Another good usecase would be to bind the `expand` function to a slider which the user can manipulate to expand the asset.  


```jsx runnable
// import { ExpandAssetTool } from '@cognite/reveal/tools';

const assetRootTreeIndex = 570730;

const expandTool = new ExpandAssetTool(assetRootTreeIndex, model);

model.hideAllNodes();
model.showNodeByTreeIndex(assetRootTreeIndex, true);

const rootBoundingBox = model.getBoundingBoxByTreeIndex(assetRootTreeIndex)
  .then(boundingBox => {
    viewer.fitCameraToBoundingBox(boundingBox, 0);
  })
  .then(() => {
    return expandTool.readyPromise;
  })
  .then(() => {
    const clock = new THREE.Clock(true);
    clock.start();

    setInterval(() =>{
      const elapsedTime = clock.getElapsedTime();
      const expandRadius = Math.sin(elapsedTime) * 0.5 + 0.5; 
      expandTool.expand(expandRadius);
    }, 20);
  });

```
